United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6936168 Recent fix for unmapping stack guard pages doesn't close /proc/self/maps
6936168 : Recent fix for unmapping stack guard pages doesn't close /proc/self/maps

Details
Type:
Bug
Submit Date:
2010-03-18
Status:
Closed
Updated Date:
2012-10-08
Project Name:
JDK
Resolved Date:
2010-04-06
Component:
hotspot
OS:
generic
Sub-Component:
runtime
CPU:
generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs18
Fixed Versions:
hs18

Related Reports
Backport:
Backport:
Backport:
Backport:
Backport:
Duplicate:

Sub Tasks

Description
On 03/18/2010 09:10 AM, Andreas Kohn wrote:

With this change I seem to hit the limit on the number of open files.
Looking through it, shouldn't get_stack_bounds() close the FILE* it
opened?

For example an eclipse process shows this:

/proc/20662/fd>ls -al |grep -c /proc/20662/maps
1917

                                    

Comments
EVALUATION

ChangeSet=http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/98ba8ca25feb,ChangeRequest=6936168
                                     
2010-03-19



Hardware and Software, Engineered to Work Together