6936168: Recent fix for unmapping stack guard pages doesn't close /proc/self/maps

Add close to returns (fix for 6929067 also contributed by aph)

Co-authored-by: Andreas Kohn <andreas.kohn@fredhopper.com>
Reviewed-by: aph, dcubed, andrew, acorn